site back online. cleaning up gallery and trainers sections

--- a/theme_orange/gallery-two.html
+++ b/theme_orange/gallery-two.html
@@ -158,11 +158,11 @@
             <h3>Gallery Description</h3>
           </div> -->
           <img src="../assets/images/gallery/56.jpg" alt=""></a> </li>
-        <li> <a href="../assets/images/gallery/57.jpg" rel="prettyPhoto[gallery1]">
+        <!-- <li> <a href="../assets/images/gallery/57.jpg" rel="prettyPhoto[gallery1]"> -->
          <!--<div class="gamma-description">
             <h3>Gallery Description</h3>
           </div> -->
-          <img src="../assets/images/gallery/57.jpg" alt=""></a> </li>
+          <!-- <img src="../assets/images/gallery/57.jpg" alt=""></a> </li> -->
         <li> <a href="../assets/images/gallery/58.jpg" rel="prettyPhoto[gallery1]">
           <!--<div class="gamma-description">
             <h3>Gallery Description</h3>
@@ -204,15 +204,15 @@
           </div> -->
           <img src="../assets/images/gallery/65.jpg" alt=""></a> </li>
         <li> <a href="../assets/images/gallery/66.jpg" rel="prettyPhoto[gallery1]">
-          <<!--<div class="gamma-description">
-            <h3>Gallery Description</h3>
-          </div> -->
-          <img src="../assets/images/gallery/66.jpg" alt=""></a> </li>
-        <li> <a href="../assets/images/gallery/67.jpg" rel="prettyPhoto[gallery1]">
           <!--<div class="gamma-description">
             <h3>Gallery Description</h3>
           </div> -->
-          <img src="../assets/images/gallery/67.jpg" alt=""></a> </li>
+          <img src="../assets/images/gallery/66.jpg" alt=""></a> </li>
+        <!-- <li> <a href="../assets/images/gallery/67.jpg" rel="prettyPhoto[gallery1]"> -->
+          <!--<div class="gamma-description">
+            <h3>Gallery Description</h3>
+          </div> -->
+          <!-- <img src="../assets/images/gallery/67.jpg" alt=""></a> </li> -->
         <li> <a href="../assets/images/gallery/68.jpg" rel="prettyPhoto[gallery1]">
           <!--<div class="gamma-description">
             <h3>Gallery Description</h3>
@@ -238,11 +238,11 @@
             <h3>Gallery Description</h3>
           </div> -->
           <img src="../assets/images/gallery/70.jpg" alt=""></a> </li>
-        <li> <a href="../assets/images/gallery/71.jpg" rel="prettyPhoto[gallery1]">
+        <!-- <li> <a href="../assets/images/gallery/71.jpg" rel="prettyPhoto[gallery1]"> -->
           <!--<div class="gamma-description">
             <h3>Gallery Description</h3>
           </div> -->
-          <img src="../assets/images/gallery/71.jpg" alt=""></a> </li>
+          <!-- <img src="../assets/images/gallery/71.jpg" alt=""></a> </li> -->
         <li> <a href="../assets/images/gallery/72.jpg" rel="prettyPhoto[gallery1]">
           <!--<div class="gamma-description">
             <h3>Gallery Description</h3>
@@ -304,7 +304,7 @@
           </div>
           <img src="../assets/images/gallery/10.png" alt=""></a> </li>
 
->
+
 
 
 
