--- a/theme_orange/trainers.html
+++ b/theme_orange/trainers.html
@@ -90,7 +90,7 @@
             </article>
           </div>
         </div>
-        <div class="portfolio tb-blog teacher tpl4 row">
+        <!-- <div class="portfolio tb-blog teacher tpl4 row">
           <div class="col-xs-12 teacher_item_active">
             <article class="post-4223 teacher type-teacher status-publish format-standard has-post-thumbnail hentry">
               <div class="tb-teacher-image"> <img class="bt-image-cropped" src="../assets/images/trainers/melissaWide.jpg"
@@ -117,7 +117,7 @@
               </div>
             </article>
           </div>
-        </div>
+        </div> -->
         <div class="portfolio tb-blog teacher tpl4 row">
           <div class="col-xs-12 teacher_item_active">
             <article class="post-4223 teacher type-teacher status-publish format-standard has-post-thumbnail hentry">
@@ -147,7 +147,7 @@
             </article>
           </div>
         </div>
-        <div class="portfolio tb-blog teacher tpl4 row">
+        <!-- <div class="portfolio tb-blog teacher tpl4 row">
           <div class="col-xs-12 teacher_item_active">
             <article class="post-4223 teacher type-teacher status-publish format-standard has-post-thumbnail hentry">
               <div class="tb-teacher-image"> <img class="bt-image-cropped" src="../assets/images/trainers/garrettWide.jpg"
@@ -175,8 +175,8 @@
               </div>
             </article>
           </div>
-        </div>
-        <div class="portfolio tb-blog teacher tpl4 row">
+        </div> -->
+        <!-- <div class="portfolio tb-blog teacher tpl4 row">
           <div class="col-xs-12 teacher_item_active">
             <article class="post-4223 teacher type-teacher status-publish format-standard has-post-thumbnail hentry">
               <div class="tb-teacher-image"> <img class="bt-image-cropped" src="../assets/images/trainers/alanaWide.jpg"
@@ -202,7 +202,7 @@
               </div>
             </article>
           </div>
-        </div>
+        </div> -->
         <div class="portfolio tb-blog teacher tpl4 row">
           <div class="col-xs-12 teacher_item_active">
             <article class="post-4223 teacher type-teacher status-publish format-standard has-post-thumbnail hentry">
