cleaning up site including changing CSS on pricing page, deleting Pinterest section, and other things

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
           <p class="phone">(910) 581-3667</p>
         </div>
         <div class="col-lg-3 col-sm-6">
-          <h6>Pinterest</h6>
+          <!-- <h6>Pinterest</h6>
           <div class="about-links">
             <div class="pint-img"><img src="../assets/images/images/pint-1.jpg" alt="" class="img-responsive" /> </div>
             <div class="pint-img"><img src="../assets/images/images/pint-2.jpg" alt="" class="img-responsive" /> </div>
@@ -507,7 +507,7 @@
             <div class="pint-img"><img src="../assets/images/images/pint-5.jpg" alt="" class="img-responsive" /> </div>
             <div class="pint-img"><img src="../assets/images/images/pint-6.jpg" alt="" class="img-responsive" /> </div>
             <div class="clearfix"></div>
-          </div>
+          </div> -->
           <h6>Follow us on</h6>
           <div class="social-links"><a href="" title="RSS"><i class="fa fa-rss"></i></a> <a title="Facebook" href="https://www.facebook.com/FiveRingsSC/"><i
                 class="fa fa-facebook"></i></a> <a href="" title="Twitter"><i class="fa fa-twitter"></i></a> <a href="https://www.instagram.com/5ringssc/"
