--- a/theme_orange/page-not-found.html
+++ b/theme_orange/page-not-found.html
@@ -151,7 +151,7 @@
           <!-- row -->
           <div class="row">
             <div class="col-twelve">
-              <h1 class="kern-this">404 Error.</h1>
+              <h1 class="kern-this">Under Construction.</h1>
               <p> Oooooops! We're sorry. This page is still under construction! </p>
               <div class="search">
                 <form>
