--- a/theme_orange/pricing.html
+++ b/theme_orange/pricing.html
@@ -68,7 +68,8 @@
     <!-- row -->
     <div class="row col-list">
       <div class="col-md-3 t1">
-        <div class="col-head text-center"> <span>$100 / month</span>
+<div class="col-head text-center"> <span>$100 / month</span>
+  <!--$100 / month -->
           <h2>Full Access Membership</h2>
         </div>
         <ul class="list-unstyled">
@@ -85,7 +86,7 @@
             <p class="option">On-Site, Online Coaching & Remote Coaching</p>
           </li>
           <li>
-            <p><a href="#" title="Sign up now">Sign Up Now</a></p>
+            <!-- <p><a href="#" title="Sign up now">Sign Up Now</a></p> -->
           </li>
         </ul>
       </div>
@@ -107,7 +108,7 @@
             <p class="option">1 Day / Week Hands on Coaching</p>
           </li>
           <li>
-            <p><a href="#" title="Sign up now">Sign Up Now</a></p>
+            <!-- <p><a href="#" title="Sign up now">Sign Up Now</a></p> -->
           </li>
         </ul>
       </div>
@@ -129,7 +130,7 @@
             <p class="option">10 visits $80</p>
           </li>
           <li>
-            <p><a href="#" title="Sign up now">Sign Up Now</a></p>
+            <!-- <p><a href="#" title="Sign up now">Sign Up Now</a></p> -->
           </li>
         </ul>
       </div>
@@ -151,7 +152,7 @@
             <p class="option">1st Member $100, 2nd $80, etc...</p>
           </li>
           <li>
-            <p><a href="#" title="Sign up now">Sign Up Now</a></p>
+            <!-- <p><a href="#" title="Sign up now">Sign Up Now</a></p> -->
           </li>
         </ul>
       </div>
